--- a/Halallabirintus/nbproject/project.properties
+++ b/Halallabirintus/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Halallabirintus
-main.class=csomag.K
+main.class=csomag.Halallabirintus
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
